bugfix: burger menu on cover on mobile

--- a/assets/scss/_variables_project_after_bs.scss
+++ b/assets/scss/_variables_project_after_bs.scss
@@ -225,12 +225,14 @@
     --#{$prefix}navbar-brand-hover-color: #{$navbar-dark-brand-hover-color};
     }
       // Clear on clouds maybe remove if cover image updated
-    .td-navbar.td-navbar-cover {
-      --#{$prefix}navbar-color: #{$navbar-light-color};
-      --#{$prefix}navbar-hover-color: #{$navbar-light-hover-color};
-      --#{$prefix}navbar-disabled-color: #{$navbar-light-disabled-color};
-      --#{$prefix}navbar-active-color: #{$navbar-light-active-color};
-      --#{$prefix}navbar-brand-color: #{$navbar-light-brand-color};
+      @media(min-width: 768px){
+      .td-navbar.td-navbar-cover {
+        --#{$prefix}navbar-color: #{$navbar-light-color};
+        --#{$prefix}navbar-hover-color: #{$navbar-light-hover-color};
+        --#{$prefix}navbar-disabled-color: #{$navbar-light-disabled-color};
+        --#{$prefix}navbar-active-color: #{$navbar-light-active-color};
+        --#{$prefix}navbar-brand-color: #{$navbar-light-brand-color};
+        }
       }
     // icons
     .svg-invert {
